fix: fix unit test from main branch